fix: fix admonitions color in dark mode

--- a/assets/scss/ninfa/_admonitions.scss
+++ b/assets/scss/ninfa/_admonitions.scss
@@ -1,7 +1,12 @@
 .alert {
     margin-left: -2rem;
 
+    a {
+        color: var(--admonitions-link-color);
+    }
+
     &-info {
+        color: black;
         background-color: var(--info-color);
         padding: 1rem;
 
