--- a/assets/scss/ninfa/_theme.scss
+++ b/assets/scss/ninfa/_theme.scss
@@ -11,6 +11,7 @@
     --accent-color: var(--primary-color);
     --info-post-color: hsla(0deg 0% 100% / 40%);
     --info-color: hsl(210deg 100% 90%);
+    --admonitions-link-color: var(--primary-color);
     --font-san-serif: -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-serif: 'Charter', serif;
     --font-mono: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
